# claude-council

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml  requirements.txt
moderators/: fx_swing_chair.md
overseers/: portfolio_overseer.md
scripts/: regenerate_plan.py  run_autonomous.py  run_autonomous.sh  run_debate.py  run_paper_trader.py  seed_debate.py  show_trades.py  vps_bootstrap.sh
specialists/: _template.md  intermarket_correlation.md  macro_fundamentalist.md  quant_volatility.md  risk_manager.md  sentiment_positioning.md  technical_chartist.md
src/trade_council/: __init__.py  builtin_decisions.py  config.py  debate.py  moderator.py  overseer.py  plan_generator.py  research.py  scheduler.py  specialist.py  transcript.py
src/trade_council/backends/: __init__.py  api.py  base.py  claude_code.py
src/trade_council/formats/: __init__.py  base.py  council.py
src/trade_council/paper_trader/: __init__.py  engine.py  enroll.py  ledger.py  notify.py  plan.py  registry.py
src/trade_council/paper_trader/data/: __init__.py  calendar.py  prices.py
tests/: test_pnl_usd.py
